--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         </p>
     </div>
     <div class="hidden">
+        <img src="images/apple.png" alt="appleimg" width="50" height"50" style="display: none" id="appleimgg">
+        <img src="images/bug.png" alt="bugimg" width="50" height"50" style="display: none" id="bugimgg">
         <img src="images/mrt.jpg" alt="Mr T" id="default">
         
     </div>
