--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Car Game Files</title>
+    <title>Fruit Fumble</title>
    
 </head>
 <body>
@@ -27,7 +27,10 @@
     </div>
     <div class="hidden">
         <img src="images/apple.png" alt="appleimg" width="50" height"50" style="display: none" id="appleimgg">
+        <img src="images/orange.png" alt="orangeimg" width="50" height"50" style="display: none" id="orangeimgg">
         <img src="images/bug.png" alt="bugimg" width="50" height"50" style="display: none" id="bugimgg">
+        <img src="images/floorbug.png" alt="bugimg2" width="50" height"50" style="display: none" id="bugimgg2">
+        <img src="images/orangebackdrop.png" alt="orange2img" width="50" height"50" style="display: none" id="orange2imgg">
         <img src="images/mrt.jpg" alt="Mr T" id="default">
         
     </div>
