--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div>
-        <h2>Platformer <span>Use the w,a,space keys to move the avatar</span></h2>
+        <h2>Fruit Fumble <span>Enjoy the game.</span></h2>
         <canvas width="800" height="500"></canvas>
     </div>
    
@@ -29,8 +29,10 @@
         <img src="images/apple.png" alt="appleimg" width="50" height"50" style="display: none" id="appleimgg">
         <img src="images/orange.png" alt="orangeimg" width="50" height"50" style="display: none" id="orangeimgg">
         <img src="images/bug.png" alt="bugimg" width="50" height"50" style="display: none" id="bugimgg">
-        <img src="images/floorbug.png" alt="bugimg2" width="50" height"50" style="display: none" id="bugimgg2">
-        <img src="images/orangebackdrop.png" alt="orange2img" width="50" height"50" style="display: none" id="orange2imgg">
+        <img src="images/fireball-clipart-xl.png" alt="fireimg" width="50" height"50" style="display: none" id="fireimgg">
+        <img src="images/2297266.png" alt="sprayimg" width="50" height"50" style="display: none" id="sprayimgg">
+        <img src="images/floorbug.png" alt="bugimg2" width="80" height"50" style="display: none" id="bugimgg2">
+        <img src="images/orangebackdrop.png" alt="orange2img" width="100" height"100" style="display: none" id="orange2imgg">
         <img src="images/mrt.jpg" alt="Mr T" id="default">
         
     </div>
