--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <img src="images/2297266.png" alt="sprayimg" width="50" height"50" style="display: none" id="sprayimgg">
         <img src="images/floorbug.png" alt="bugimg2" width="80" height"50" style="display: none" id="bugimgg2">
         <img src="images/orangebackdrop.png" alt="orange2img" width="100" height"100" style="display: none" id="orange2imgg">
+        <img src="images/fruitfumbletitle.png" alt="titleimg" width="100" height"100" style="display: none" id="titleimgg">
         <img src="images/mrt.jpg" alt="Mr T" id="default">
         
     </div>
