--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         <img src="images/floorbug.png" alt="bugimg2" width="80" height"50" style="display: none" id="bugimgg2">
         <img src="images/orangebackdrop.png" alt="orange2img" width="100" height"100" style="display: none" id="orange2imgg">
         <img src="images/fruitfumbletitle.png" alt="titleimg" width="100" height"100" style="display: none" id="titleimgg">
+        <img src="images/kitchen.png" alt="kitchenimg" width="100" height"100" style="display: none" id="kitchenimgg">
+        <img src="images/losescreen.png" alt="losescreenimg" width="100" height"100" style="display: none" id="losescreenimgg">
         <img src="images/mrt.jpg" alt="Mr T" id="default">
         
     </div>
